--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: mha_to_stl_env
+name: eisenv
 channels:
   - conda-forge
   - defaults
@@ -191,11 +191,15 @@ dependencies:
   - zlib=1.2.13=hfb2fe0b_6
   - zstd=1.5.6=hb46c0d2_0
   - pip:
+      - adaptmesh==0.3.3
       - certifi==2024.6.2
       - charset-normalizer==3.3.2
       - contourpy==1.1.1
       - cycler==0.12.1
+      - cython==3.0.10
+      - fast-simplification==0.1.7
       - fonttools==4.53.0
+      - gmsh-interop==2024.1
       - importlib-resources==6.4.0
       - ipympl==0.9.3
       - ipython-genutils==0.2.0
@@ -204,11 +208,21 @@ dependencies:
       - kiwisolver==1.4.5
       - matplotlib==3.7.5
       - medpy==0.5.1
+      - mesh==1.0.0a1
+      - meshpy==2022.1.3
       - pillow==10.3.0
+      - pooch==1.8.2
+      - pyacvd==0.2.11
+      - pybind11==2.13.1
       - pydicom==2.4.4
       - pyparsing==3.1.2
+      - pytools==2024.1.5
+      - pyvista==0.43.10
+      - pyvtk==0.5.18
       - requests==2.32.3
+      - scikit-fem==9.1.1
       - scipy==1.10.1
+      - scooby==0.10.0
       - simpleitk==2.3.1
       - snap==0.5
       - stl==0.0.3
